--- a/src/styles/card.module.css
+++ b/src/styles/card.module.css
@@ -6,6 +6,7 @@
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
   transition: all 300ms ease-in-out;
+  position: relative;
 }
 
 .card:hover,
@@ -46,4 +47,11 @@
 .cardDark span {
   color: #aaa;
   font-size: 14px;
+}
+
+.desc {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
