--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,3 +7,12 @@
   gap: 2rem;
   align-items: center;
 }
+
+.title {
+  position: absolute;
+  top: 1rem;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 0;
+  padding: 0;
+}
